# generic-account-solana

./: Anchor.toml  README.md
programs/generic_account/: Cargo.toml
programs/generic_account/src/: lib.rs  states.rs
programs/generic_account/tests/: generic_account.rs
tests/: generic_account.ts
