[package]
name = "generic_account"
authors = ["Terry"]
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "generic_account"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
num_enum = "0.5.4"
solana-program = "1.9.14"

[dev-dependencies]
solana-sdk = "~1.9.28"
env_logger="~0.9.0"
solana-program-test = "~1.9.28"
solana-program = "1.9.15"
